# conbhuide

./: .gitignore  Cargo.toml  README.md  package-lock.json
js/: conbhuide.html
src/: celtic.rs  edge.rs  life.rs  main.rs
